--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
 /tests export-ignore
+.gitattributes export-ignore
+.gitignore export-ignore
+composer.* export-ignore
+LICENSE export-ignore
+phpstan.neon export-ignore
+phpunit.* export-ignore
